--- a/package.json
+++ b/package.json
@@ -17,9 +17,25 @@
         "@rushstack/eslint-patch": "^1.8.0",
         "@vitejs/plugin-vue": "^5.0.5",
         "@vue/eslint-config-prettier": "^9.0.0",
+        "autoprefixer": "^10.4.20",
         "eslint": "^8.57.0",
         "eslint-plugin-vue": "^9.23.0",
         "prettier": "^3.2.5",
+        "sass": "^1.77.8",
+        "tailwindcss": "^3.4.10",
         "vite": "^5.3.1"
+    },
+    "browserslist": {
+        "production": [
+            ">0.01%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            ">0.01%",
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
