--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue-starter",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "private": true,
     "type": "module",
     "scripts": {
@@ -23,7 +23,8 @@
         "prettier": "^3.2.5",
         "sass": "^1.77.8",
         "tailwindcss": "^3.4.10",
-        "vite": "^5.3.1"
+        "vite": "^5.3.1",
+        "vue-router": "^4.4.3"
     },
     "browserslist": {
         "production": [
